# HackathonYandex2023

./: .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  data_set.json  docker-compose.yml  main.py  pyproject.toml  start.sh
.github/workflows/: main.yml
src/: cache.py  database.py  diary.py  main.py  messages.py  recognize.py  server.py  skills.py  yandex.py  yandex_fuc.py  yandex_functions.py
